force-app/main/default/objects/Kiva_Loan_Participation__c/Kiva_Loan_Participation__c.object-meta.xml
<CustomObject>
    <label>Kiva Loan Participation</label>
    <nameField>
        <displayFormat>KLP-{0000000}</displayFormat>
        <label>Kiva Loan Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kiva Loan Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>