force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <label>Accounts</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank Account</fullName>
            </value>
            <value>
                <fullName>M-pesa Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>