force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Amount_of_prior_loan__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_prior_loan__c</fullName>
    <label>Amount of prior loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>