force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Bairro_Declaration_Form_photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Bairro_Declaration_Form_photo_URL__c</fullName>
    <label>Bairro Declaration Form photo URL</label>
    <type>Url</type>
</CustomField>