force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Bank_Details_Photo__c.field-meta.xml
<CustomField>
    <fullName>Bank_Details_Photo__c</fullName>
    <label>Bank Details Photo</label>
    <type>Url</type>
</CustomField>