force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Category_of_loan__c.field-meta.xml
<CustomField>
    <fullName>Category_of_loan__c</fullName>
    <label>Category of loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>18, Agricultural</fullName>
            </value>
            <value>
                <fullName>85, Agricultural Infrastructure</fullName>
            </value>
            <value>
                <fullName>96, Agricultural Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>