force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Client_Gender__c.field-meta.xml
<CustomField>
    <fullName>Client_Gender__c</fullName>
    <formula>TEXT( Kiva_Client__r.Gender__c)</formula>
    <label>Client Gender</label>
    <type>Text</type>
</CustomField>