force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Client_ID_Backside_Photo__c.field-meta.xml
<CustomField>
    <fullName>Client_ID_Backside_Photo__c</fullName>
    <formula>Kiva_Client__r.ID_Card_Back__c</formula>
    <label>Client ID (Backside) - Photo</label>
    <type>Text</type>
</CustomField>