force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Client_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Last_Name__c</fullName>
    <formula>Kiva_Client__r.Client_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Last Name</label>
    <type>Text</type>
</CustomField>