force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Client_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Phone__c</fullName>
    <formula>Kiva_Client__r.Client_Phone__c</formula>
    <label>Client Phone</label>
    <type>Text</type>
</CustomField>