force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Client_Waiver_Form_photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Client_Waiver_Form_photo_URL__c</fullName>
    <label>Client Waiver Form photo URL</label>
    <type>Url</type>
</CustomField>