force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Collateral_Form_Photo__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Form_Photo__c</fullName>
    <formula>IF (ISBLANK(    Collateral_Form_Photo_URL__c ),
&quot;No Photo&quot;,
HYPERLINK(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE(Collateral_Form_Photo_URL__c, &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE(Collateral_Form_Photo_URL__c, &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) ) ,
IMAGE(IF( TEXT($Profile.UserType )= &quot;PowerPartner&quot;,
SUBSTITUTE(SUBSTITUTE(Collateral_Form_Photo_URL__c , &quot;na1.salesforce.com&quot;, &quot;ide.force.com/taroworks&quot;),&quot;ideglobal.my.salesforce.com&quot;,&quot;ide.force.com/taroworks&quot;)
, SUBSTITUTE(Collateral_Form_Photo_URL__c, &quot;na1.salesforce.com&quot;, &quot;ideglobal--c.na8.content.force.com&quot;) )
, &quot;Enlarge Customer Photo&quot;, 320, 240)
)
)</formula>
    <label>Collateral Form Photo</label>
    <type>Text</type>
</CustomField>