force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Collateral_Form_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Form_Photo_URL__c</fullName>
    <label>Collateral Form photo URL</label>
    <type>Url</type>
</CustomField>