force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Date_of_last_training__c.field-meta.xml
<CustomField>
    <fullName>Date_of_last_training__c</fullName>
    <label>Date of last training</label>
    <type>Date</type>
</CustomField>