force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Difficult_Default_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Difficult_Default_Borrower__c</fullName>
    <formula>Kiva_Loan__r.Difficult_Default_Borrower__c</formula>
    <label>Difficult/Default Borrower</label>
    <type>Checkbox</type>
</CustomField>