force-app/main/default/objects/Kiva_Loan_Participation__c/fields/distrito_moz__c.field-meta.xml
<CustomField>
    <fullName>distrito_moz__c</fullName>
    <formula>Kiva_Client__r.MZ_Distrito__r.Name</formula>
    <label>Distrito (Moz)</label>
    <type>Text</type>
</CustomField>