force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Employee_Loans__c.field-meta.xml
<CustomField>
    <fullName>Employee_Loans__c</fullName>
    <formula>Kiva_Loan__r.Employee_Loan__c</formula>
    <label>Employee Loans</label>
    <type>Checkbox</type>
</CustomField>