force-app/main/default/objects/Kiva_Loan_Participation__c/fields/How_loan_will_increase_business_income__c.field-meta.xml
<CustomField>
    <fullName>How_loan_will_increase_business_income__c</fullName>
    <label>How loan will increase business income</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>