force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Kiva_Client__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Client__c</fullName>
    <label>Kiva Client</label>
    <referenceTo>Kiva_Client__c</referenceTo>
    <relationshipLabel>Kiva Loan Participations</relationshipLabel>
    <relationshipName>Kiva_Loan_Participations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>