force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Kiva_Client_formula__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Client_formula__c</fullName>
    <formula>Kiva_Client__r.Name</formula>
    <label>Kiva Client (Formula)</label>
    <type>Text</type>
</CustomField>