force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Kiva_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Client_ID__c</fullName>
    <formula>Kiva_Client__r.Client_ID__c</formula>
    <label>Kiva Client ID</label>
    <type>Text</type>
</CustomField>