force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Kiva_Loan__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Loan__c</fullName>
    <label>Kiva Loan</label>
    <referenceTo>Kiva_Loan__c</referenceTo>
    <relationshipLabel>Kiva Loan Participations</relationshipLabel>
    <relationshipName>Kiva_Loan_Participations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>