force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Loan_amount_final__c.field-meta.xml
<CustomField>
    <fullName>Loan_amount_final__c</fullName>
    <label>XXX-Loan amount final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>