force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Loan_Amount_needed__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount_needed__c</fullName>
    <label>Loan Amount needed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>