force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Loan_Group_Position__c.field-meta.xml
<CustomField>
    <fullName>Loan_Group_Position__c</fullName>
    <label>Loan Group Position</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Group Leader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>