force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Loan_Status__c</fullName>
    <formula>CASE(TEXT( Kiva_Loan__r.Kiva_Status__c), 
&quot;Refunded&quot;, &quot;Closed&quot;, 
&quot;Inactive&quot;, &quot;Closed&quot;,
&quot;Ended&quot;, &quot;Closed&quot;,
&quot;Defaulted&quot;, &quot;Defaulted&quot;,
&quot;Expired&quot;, &quot;Closed&quot;,
&quot;Active&quot;
)</formula>
    <inlineHelpText>Based on &quot;Kiva Status&quot; Field on the Kiva Loan record</inlineHelpText>
    <label>Loan Status</label>
    <type>Text</type>
</CustomField>