force-app/main/default/objects/Kiva_Loan_Participation__c/fields/monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>monthly_Repayment__c</fullName>
    <inlineHelpText>in metical</inlineHelpText>
    <label>monthly Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>