force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Monthly_Savings_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Savings_Contribution__c</fullName>
    <label>Monthly Savings Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>