force-app/main/default/objects/Kiva_Loan_Participation__c/fields/NIB_BIN__c.field-meta.xml
<CustomField>
    <fullName>NIB_BIN__c</fullName>
    <label>NIB/BIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>