force-app/main/default/objects/Kiva_Loan_Participation__c/fields/of_regular_clients__c.field-meta.xml
<CustomField>
    <fullName>of_regular_clients__c</fullName>
    <label># of regular clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>