force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Participated_in_iDE_Trainings__c.field-meta.xml
<CustomField>
    <fullName>Participated_in_iDE_Trainings__c</fullName>
    <label>Participated in iDE Trainings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agro Training</fullName>
            </value>
            <value>
                <fullName>Financial Training</fullName>
            </value>
            <value>
                <fullName>Farming as a Family Business</fullName>
            </value>
            <value>
                <fullName>ECPA</fullName>
            </value>
            <value>
                <fullName>Kiva Training</fullName>
            </value>
            <value>
                <fullName>ADA Training</fullName>
            </value>
            <value>
                <fullName>Business Training</fullName>
            </value>
            <value>
                <fullName>NTT</fullName>
            </value>
            <value>
                <fullName>Savings group training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>