force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Period_of_the_loan__c.field-meta.xml
<CustomField>
    <fullName>Period_of_the_loan__c</fullName>
    <inlineHelpText>in Months</inlineHelpText>
    <label>Period of the loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>