force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Prior_experience_with_a_loan__c.field-meta.xml
<CustomField>
    <fullName>Prior_experience_with_a_loan__c</fullName>
    <label>Prior experience with a loan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>