force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Prior_Loan_Fully_Repaid__c.field-meta.xml
<CustomField>
    <fullName>Prior_Loan_Fully_Repaid__c</fullName>
    <label>Prior Loan Fully Repaid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>