force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Prior_loan_Institution__c.field-meta.xml
<CustomField>
    <fullName>Prior_loan_Institution__c</fullName>
    <label>Prior loan Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>