force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Purpose_of_the_loan__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_the_loan__c</fullName>
    <label>Purpose of the loan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>