force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Risky_Loans_Borrowers__c.field-meta.xml
<CustomField>
    <fullName>Risky_Loans_Borrowers__c</fullName>
    <formula>Kiva_Loan__r.Risky_Loans_Borrowers__c</formula>
    <label>Risky Loans/Borrowers</label>
    <type>Checkbox</type>
</CustomField>