force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Time_needed_to_repay_loan__c.field-meta.xml
<CustomField>
    <fullName>Time_needed_to_repay_loan__c</fullName>
    <inlineHelpText>in Months</inlineHelpText>
    <label>Time needed to repay loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>