force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Total_value_of_collateral__c.field-meta.xml
<CustomField>
    <fullName>Total_value_of_collateral__c</fullName>
    <label>Total value of collateral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>