force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Type_of_Application__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Application__c</fullName>
    <label>Type of Application</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>