force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Type_of_Borrower__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Borrower__c</fullName>
    <formula>text(Kiva_Client__r.Type_of_Borrower__c)</formula>
    <label>Type of Borrower</label>
    <type>Text</type>
</CustomField>