force-app/main/default/objects/Kiva_Loan_Participation__c/fields/Years_in_this_business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_this_business__c</fullName>
    <label># Years in this business</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>