force-app/main/default/objects/Kiva_Loan_Participation__c/fields/years_since_group_formed__c.field-meta.xml
<CustomField>
    <fullName>years_since_group_formed__c</fullName>
    <label># years since group formed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>