force-app/main/default/objects/Kiva_Loan_Participation__c/recordTypes/Mozambique.recordType-meta.xml
<RecordType>
    <fullName>Mozambique</fullName>
    <active>true</active>
    <description>for Mozambique Kiva Loans</description>
    <label>Mozambique</label>
</RecordType>