force-app/main/default/objects/Kiva_Loan_Participation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Kiva_Client__c</columns>
    <columns>Kiva_Client_ID__c</columns>
    <columns>Kiva_Loan__c</columns>
    <columns>Client_Gender__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>